correct vid alignment

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ h3 {
 
 h5 {
   z-index: 1;
+  margin-bottom: 5px;
 }
 
 .video-container {
